// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicForm should enable remote captcha 1`] = `
<LocalForm
  getDispatch={[Function]}
  initialState={Object {}}
  model="publicform"
  onSubmit={[Function]}
  validators={
    Object {
      "captcha": Object {
        "required": [Function],
      },
      "title": Object {
        "required": [Function],
      },
    }
  }
>
  <div
    className="public-form"
  >
    <Connect(FormGroup)
      key="title"
      model=".title"
    >
      <ul
        className="search__filter"
      >
        <li>
          <label
            htmlFor="title"
          >
            <Connect(Translate)
              context="123"
            >
              Title changed
            </Connect(Translate)>
            <span
              className="required"
            >
              *
            </span>
          </label>
        </li>
        <li
          className="wide"
        >
          <DefaultConnectedControlText
            className="form-control"
            id="title"
            model=".title"
          />
        </li>
      </ul>
    </Connect(FormGroup)>
    <Connect(MetadataFormFields)
      model="publicform"
      template={
        Immutable.Map {
          "_id": "123",
          "commonProperties": Immutable.List [
            Immutable.Map {
              "label": "Title changed",
              "name": "title",
            },
          ],
          "properties": Immutable.List [
            Immutable.Map {
              "type": "text",
              "name": "text",
            },
          ],
        }
      }
      thesauris={Immutable.List []}
    />
    <Connect(FormGroup)
      key="captcha"
      model=".captcha"
    >
      <ul
        className="search__filter"
      >
        <li>
          <label>
            <Connect(Translate)>
              Captcha
            </Connect(Translate)>
            <span
              className="required"
            >
              *
            </span>
          </label>
        </li>
        <li
          className="wide"
        >
          <Captcha
            model=".captcha"
            refresh={[Function]}
            remote={true}
          />
        </li>
      </ul>
    </Connect(FormGroup)>
    <input
      className="btn btn-success"
      type="submit"
      value="Submit"
    />
  </div>
</LocalForm>
`;

exports[`PublicForm should render a form 1`] = `
<LocalForm
  getDispatch={[Function]}
  initialState={Object {}}
  model="publicform"
  onSubmit={[Function]}
  validators={
    Object {
      "captcha": Object {
        "required": [Function],
      },
      "title": Object {
        "required": [Function],
      },
    }
  }
>
  <div
    className="public-form"
  >
    <Connect(FormGroup)
      key="title"
      model=".title"
    >
      <ul
        className="search__filter"
      >
        <li>
          <label
            htmlFor="title"
          >
            <Connect(Translate)
              context="123"
            >
              Title changed
            </Connect(Translate)>
            <span
              className="required"
            >
              *
            </span>
          </label>
        </li>
        <li
          className="wide"
        >
          <DefaultConnectedControlText
            className="form-control"
            id="title"
            model=".title"
          />
        </li>
      </ul>
    </Connect(FormGroup)>
    <Connect(MetadataFormFields)
      model="publicform"
      template={
        Immutable.Map {
          "_id": "123",
          "commonProperties": Immutable.List [
            Immutable.Map {
              "label": "Title changed",
              "name": "title",
            },
          ],
          "properties": Immutable.List [
            Immutable.Map {
              "type": "text",
              "name": "text",
            },
          ],
        }
      }
      thesauris={Immutable.List []}
    />
    <Connect(FormGroup)
      key="captcha"
      model=".captcha"
    >
      <ul
        className="search__filter"
      >
        <li>
          <label>
            <Connect(Translate)>
              Captcha
            </Connect(Translate)>
            <span
              className="required"
            >
              *
            </span>
          </label>
        </li>
        <li
          className="wide"
        >
          <Captcha
            model=".captcha"
            refresh={[Function]}
            remote={false}
          />
        </li>
      </ul>
    </Connect(FormGroup)>
    <input
      className="btn btn-success"
      type="submit"
      value="Submit"
    />
  </div>
</LocalForm>
`;

exports[`PublicForm should render a form with file and attachments 1`] = `
<LocalForm
  getDispatch={[Function]}
  initialState={Object {}}
  model="publicform"
  onSubmit={[Function]}
  validators={
    Object {
      "captcha": Object {
        "required": [Function],
      },
      "title": Object {
        "required": [Function],
      },
    }
  }
>
  <div
    className="public-form"
  >
    <Connect(FormGroup)
      key="title"
      model=".title"
    >
      <ul
        className="search__filter"
      >
        <li>
          <label
            htmlFor="title"
          >
            <Connect(Translate)
              context="123"
            >
              Title changed
            </Connect(Translate)>
            <span
              className="required"
            >
              *
            </span>
          </label>
        </li>
        <li
          className="wide"
        >
          <DefaultConnectedControlText
            className="form-control"
            id="title"
            model=".title"
          />
        </li>
      </ul>
    </Connect(FormGroup)>
    <Connect(MetadataFormFields)
      model="publicform"
      template={
        Immutable.Map {
          "_id": "123",
          "commonProperties": Immutable.List [
            Immutable.Map {
              "label": "Title changed",
              "name": "title",
            },
          ],
          "properties": Immutable.List [
            Immutable.Map {
              "type": "text",
              "name": "text",
            },
          ],
        }
      }
      thesauris={Immutable.List []}
    />
    <div
      className="form-group"
    >
      <ul
        className="search__filter"
      >
        <li>
          <label
            htmlFor="file"
          >
            <Connect(Translate)>
              Document
            </Connect(Translate)>
            <DefaultConnectedControlFile
              accept=".pdf"
              className="form-control"
              id="file"
              model=".file"
            />
          </label>
        </li>
      </ul>
    </div>
    <div
      className="form-group"
    >
      <ul
        className="search__filter"
      >
        <li>
          <label
            htmlFor="attachments"
          >
            <Connect(Translate)>
              Attachments
            </Connect(Translate)>
            <DefaultConnectedControlFile
              className="form-control"
              id="attachments"
              model=".attachments"
              multiple="multiple"
            />
          </label>
        </li>
      </ul>
    </div>
    <Connect(FormGroup)
      key="captcha"
      model=".captcha"
    >
      <ul
        className="search__filter"
      >
        <li>
          <label>
            <Connect(Translate)>
              Captcha
            </Connect(Translate)>
            <span
              className="required"
            >
              *
            </span>
          </label>
        </li>
        <li
          className="wide"
        >
          <Captcha
            model=".captcha"
            refresh={[Function]}
            remote={false}
          />
        </li>
      </ul>
    </Connect(FormGroup)>
    <input
      className="btn btn-success"
      type="submit"
      value="Submit"
    />
  </div>
</LocalForm>
`;
